[tool.poetry]
name = "gpt-issue-auditor"
version = "0.1.0"
description = "A GitHub Actions workflow to audit issues automatically"
authors = ["Yuichiro Smith <yu-ichiro@s3i7h.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.35.3"
PyGithub = "^2.3.0"
qdrant-client = "^1.9.2"
regex = "^2024.5.15"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
